new proj/src/objects/GE_ES_Checklist_Item_Approval__c.object
<CustomObject>
    <fields>
        <fullName>Checklist_Status__c</fullName>
        <formula>TEXT(GE_ES_Checklist_Item_Submission__r.GE_ES_Risk_Checklist_Item__r.GE_ES_Approval_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Checklist Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_pending_of_approval__c</fullName>
        <formula>IF( ISBLANK(GE_ES_Approval_Rejection_Date__c) , NOW() -GE_ES_Checklist_Item_Submission__r.GE_ES_Submission_Date__c, GE_ES_Approval_Rejection_Date__c - GE_ES_Checklist_Item_Submission__r.GE_ES_Submission_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days pending of approval</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Actual_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Actual Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Checklist_Item_Approvals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Approval_Rejection_Date__c</fullName>
        <label>Approval/Rejection Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_ES_Assigned_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Checklist_Item_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Checklist_Item_Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist Item Submission</label>
        <referenceTo>GE_ES_Checklist_Item_Submission__c</referenceTo>
        <relationshipLabel>Checklist Item Approvals</relationshipLabel>
        <relationshipName>GE_ES_Checklist_Item_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Deviation_Approver_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deviation Approver Role</label>
        <referenceTo>GE_ES_Deviation_Approver_Role__c</referenceTo>
        <relationshipLabel>Checklist Item Approvals</relationshipLabel>
        <relationshipName>Checklist_Item_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_My_Approvals__c</fullName>
        <formula>if( GE_ES_Risk_Checklist_Item__r.GE_OG_GS_DealMngt__r.RecordType.DeveloperName ==&apos;OG_GS_Deal_Management&apos;,HYPERLINK(&apos;/apex/GEGSRiskApprovalManager?id=&apos;&amp;  GE_ES_Risk_Checklist_Item__r.GE_OG_GS_DealMngt__r.Id  &amp;&apos;&amp;view=mine&apos;,&apos;Click Here&apos;)
,HYPERLINK(&apos;/apex/GEESRiskApprovalManager?id=&apos;&amp;  GE_ES_Risk_Checklist_Item__r.GE_OG_GS_DealMngt__r.Id  &amp;&apos;&amp;view=mine&apos;,&apos;Click Here&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Approvals Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Opportunity_ID__c</fullName>
        <formula>GE_ES_Checklist_Item_Submission__r.GE_ES_Opportunity__c</formula>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Opportunity_Name__c</fullName>
        <formula>GE_ES_Checklist_Item_Submission__r.GE_ES_Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Checklist Item Approvals</relationshipLabel>
        <relationshipName>Checklist_Item_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Original_Request_Date__c</fullName>
        <label>Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_ES_Risk_Checklist_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk Checklist Item</label>
        <referenceTo>GE_ES_Risk_Checklist_Item__c</referenceTo>
        <relationshipLabel>Checklist Item Approvals</relationshipLabel>
        <relationshipName>Checklist_Item_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Risk_Factor_Answer__c</fullName>
        <formula>GE_ES_Risk_Checklist_Item__r.GE_ES_Answer__c</formula>
        <label>Risk Factor Answer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Risk_Factor_Name__c</fullName>
        <formula>GE_ES_Risk_Checklist_Item__r.GE_RF_Name__c</formula>
        <label>Risk Factor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Role_Name__c</fullName>
        <formula>GE_ES_Deviation_Approver_Role__r.GE_ES_Role__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Needs Approval</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected by another approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recalled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Submission_Comments__c</fullName>
        <formula>GE_ES_Checklist_Item_Submission__r.GE_ES_Comments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submission Comments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Submission_Status__c</fullName>
        <formula>TEXT( GE_ES_Checklist_Item_Submission__r.GE_ES_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submission Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_OG_Approval_Cycle_Time__c</fullName>
        <formula>IF( AND( NOT( ISNULL( GE_ES_Original_Request_Date__c ) ), NOT( ISNULL( GE_ES_Approval_Rejection_Date__c ) ) ), DATEVALUE(GE_ES_Approval_Rejection_Date__c) - DATEVALUE(GE_ES_Original_Request_Date__c), IF(AND( NOT( ISNULL( GE_ES_Original_Request_Date__c ) ), 
ISNULL( GE_ES_Approval_Rejection_Date__c ) ), TODAY() - DATEVALUE(GE_ES_Original_Request_Date__c), 0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Cycle Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_Assigned_Queue__c</fullName>
        <description>In case the Approval record is assigned to a Queue, this field would hold the queue name.</description>
        <label>Assigned Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_IsOwnerQueue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates whether the Assignee is a User or a Queue</description>
        <label>Is Owner Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oppty_Tier_1__c</fullName>
        <formula>GE_ES_Checklist_Item_Submission__r.Oppty_Tier_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppty Tier 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SendMailProcessStage__c</fullName>
        <label>Send Mail Process Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>count_total_pending_approvers__c</fullName>
        <formula>IF(  AND(ISPICKVAL(GE_ES_Checklist_Item_Submission__r.GE_ES_Status__c ,&apos;Pending&apos;),
ISPICKVAL( GE_ES_Status__c , &apos;Submitted&apos;) ), 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>count total pending approvers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>url__c</fullName>
        <formula>HYPERLINK(&apos;$Page.GEESRiskApprovalManager?ID=&apos;&amp; GE_ES_Risk_Checklist_Item__r.GE_ES_Opportunity1__r.Id &amp;&apos;&amp;view=mine&apos;,&apos;link&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>url</label>
        <type>Text</type>
    </fields>
    <label>Checklist Item Approval</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Approval Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Item Approvals</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Require_Actual_Approver</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
text(GE_ES_Status__c) == &apos;Approved&apos;,
text(GE_ES_Status__c) == &apos;Rejected&apos;
)
&amp;&amp;
 isblank(GE_ES_Actual_Approver__c)</errorConditionFormula>
        <errorDisplayField>GE_ES_Actual_Approver__c</errorDisplayField>
        <errorMessage>Please provide an actual approver</errorMessage>
    </validationRules>
</CustomObject>